nav-items spacing fixed on bigger screens

--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -7,7 +7,8 @@
 
   &--nav {
     padding: 17px 30px 14px 29px;
-    margin-bottom: 10px;
+    margin-top: -15px;
+    margin-left: 20px;
     background-color: $color-woodsmoke;
     color: white;
     @include drop-shadow($nav-btn);
@@ -89,7 +90,7 @@
 }
 
 // Extra small devices (portrait phones, less than 576px)
-@media (min-width: 320px) {
+@media (min-width: 320px) and (max-width: 575px) {
   .btn_def {
     display: none;
   }
