--- a/styles/index.css
+++ b/styles/index.css
@@ -524,7 +524,8 @@ a {
   border-radius: 30px; }
   .btn_def--nav {
     padding: 17px 30px 14px 29px;
-    margin-bottom: 10px;
+    margin-top: -15px;
+    margin-left: 20px;
     background-color: #101112;
     color: white;
     -webkit-filter: drop-shadow(0px 20px 25px rgba(0, 0, 0, 0.4));
@@ -594,7 +595,7 @@ a {
   .btn_def--wave-transparent:hover {
     color: #24282a; }
 
-@media (min-width: 320px) {
+@media (min-width: 320px) and (max-width: 575px) {
   .btn_def {
     display: none; } }
 
@@ -610,12 +611,12 @@ a {
   .navbar__menu {
     display: flex;
     flex-direction: row;
-    padding: 60px 134px 0 0;
+    padding: 75px 144px 0 0;
     z-index: 10; }
   .navbar__list {
     margin-left: 1px; }
   .navbar__link {
-    padding: 0 18px 0 18px;
+    padding: 0 20px;
     color: #fff; }
   .navbar__link:hover {
     color: #000; }
@@ -623,6 +624,37 @@ a {
     padding-right: 38px; }
   .navbar__btn {
     color: #fff; }
+
+@media (min-width: 320px) and (max-width: 575px) {
+  .navbar__brand {
+    padding: 0; }
+  .navbar__menu {
+    position: absolute;
+    top: 40px;
+    display: none;
+    flex-direction: column;
+    z-index: 10;
+    width: 100%;
+    margin: auto;
+    padding: 0;
+    background-color: #fff;
+    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.3); }
+  .navbar__link {
+    color: black; }
+  .navbar .burger-toggler {
+    display: block;
+    cursor: pointer;
+    margin-right: 6px;
+    margin-left: auto;
+    z-index: 10; }
+    .navbar .burger-toggler div {
+      width: 24px;
+      height: 3px;
+      margin: 5px;
+      background-color: #000; } }
+
+.navbar-toggle-show {
+  display: flex; }
 
 .hero__left {
   padding: 142px 0 0 121px; }
